# waydroid

./: .abstruse.yml  .gitignore  CODE_OF_CONDUCT.md  FUNDING.yml  Makefile  README.md  alter.py  anbox.xml  andromeda.py  pyproject.toml  setup.cfg  setup.py  waydroid-container.conf  waydroid.py  waydroid_completion
.circleci/: config.yml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: check.yaml
android-store/: android-store.py
android-store/repos/: fdroid  microg  newpipe
config/: nftables.rules
config/lxc.d/: config_2
data/: Andromeda.desktop  Makefile  VkLayer_waydroid_compat.c  VkLayer_waydroid_compat.json  Waydroid.desktop  Waydroid_shutdown.desktop  andromeda.app.install.desktop  andromeda.directory  andromeda.market.desktop  andromeda.menu  id.waydro.waydroid.metainfo.xml  org.waydro.id.metainfo.xml  waydroid.app.install.desktop  waydroid.directory  waydroid.market.desktop  waydroid.menu
data/configs/: adbd  android_app  andromeda.seccomp  config_1  config_2  config_3  config_base  lxc.conf  (+4 more)
dbus/: id.waydro.Container.conf  id.waydro.Container.policy  id.waydro.Container.service  id.waydro.Notification.conf  id.waydro.Notification.service  id.waydro.Session.service  id.waydro.StateChange.conf  id.waydro.StateChange.service  io.FuriOS.AndroidStore.service  io.furios.Andromeda.Container.conf  io.furios.Andromeda.Container.service  io.furios.Andromeda.Notification.conf  io.furios.Andromeda.Notification.service  io.furios.Andromeda.StateChange.conf  io.furios.Andromeda.StateChange.service
debian/: Jenkinsfile  android-store.install  android-store.links  andromeda.install  andromeda.links  andromeda.postinst  changelog  control  copyright  drone.star  rules  waydroid-container.service  waydroid.dirs  waydroid.install  waydroid.links  waydroid.postinst
gbinder/: anbox.conf
lxc-configs/: bsp_config  config  config_1  config_2  config_nodes
openrc/: waydroid-container  waydroid-container.confd
polkit/: org.waydro.id.policy
scripts/: anbox-net.sh  check-kernel-config.sh  droidian-genprops.sh  generate-props.sh  install-pmos.sh  install-ut.sh  install.sh  mount.sh  run-container.sh  stop-container.sh  vendor-fixup.sh
systemd/: android-store.service  andromeda-container.service  andromeda-notification-server.service  andromeda-session.service  andromeda-statechange-server.service  waydroid-container.service  waydroid-notification-client.service  waydroid-notification-server.service  waydroid-session.service  waydroid-statechange-server.service
tools/: __init__.py
(+86 files in other folders)
